--- a/Done!/DatePickerTableViewCell.xib
+++ b/Done!/DatePickerTableViewCell.xib
@@ -1,36 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11535.1" systemVersion="16B2338c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13178.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11523"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="idTimelineCell" rowHeight="380" id="KGk-i7-Jjw" customClass="TimelineTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="idTimelineCell" rowHeight="380" id="KGk-i7-Jjw" customClass="DatePickerTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="380"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="379.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="acH-wS-jwy">
-                        <rect key="frame" x="0.0" y="55" width="320" height="316.5"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Trs-fO-MCp">
-                            <size key="itemSize" width="50" height="50"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <connections>
-                            <outlet property="dataSource" destination="KGk-i7-Jjw" id="nIK-Iz-RtH"/>
-                            <outlet property="delegate" destination="KGk-i7-Jjw" id="fDO-22-xRb"/>
-                        </connections>
-                    </collectionView>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06/05 12:29PM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DJc-V2-h8g">
                         <rect key="frame" x="0.0" y="50" width="320" height="38"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -42,10 +30,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <datePicker contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="yPM-qJ-gpy">
-                        <rect key="frame" x="312" y="96" width="0.0" height="216"/>
-                        <constraints>
-                            <constraint firstAttribute="width" id="DCn-e6-tGn"/>
-                        </constraints>
+                        <rect key="frame" x="8" y="96" width="304" height="162"/>
                         <date key="date" timeIntervalSinceReferenceDate="491884206.85915798">
                             <!--2016-08-03 02:30:06 +0000-->
                         </date>
@@ -77,24 +62,19 @@
                 <constraints>
                     <constraint firstItem="DJc-V2-h8g" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="3iU-nm-tYJ"/>
                     <constraint firstItem="YrG-KT-A6C" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="AM4-J3-nXl"/>
+                    <constraint firstItem="yPM-qJ-gpy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="YVo-6e-kES"/>
                     <constraint firstItem="yPM-qJ-gpy" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="a47-yl-WlQ"/>
                     <constraint firstAttribute="trailing" secondItem="YrG-KT-A6C" secondAttribute="trailing" id="eGh-kM-jlf"/>
-                    <constraint firstItem="acH-wS-jwy" firstAttribute="top" secondItem="DJc-V2-h8g" secondAttribute="bottom" constant="-33" id="flg-Iq-Wpa"/>
                     <constraint firstItem="8aC-Xg-025" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="hNQ-fQ-snc"/>
-                    <constraint firstItem="acH-wS-jwy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ivG-2B-Iyl"/>
                     <constraint firstItem="DJc-V2-h8g" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="8" id="oGI-uH-JzS"/>
                     <constraint firstItem="DJc-V2-h8g" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="42" id="p69-62-qfw"/>
                     <constraint firstAttribute="bottomMargin" secondItem="8aC-Xg-025" secondAttribute="bottom" id="rr2-Ya-fft"/>
                     <constraint firstItem="YrG-KT-A6C" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="swP-4m-lFm"/>
-                    <constraint firstItem="yPM-qJ-gpy" firstAttribute="leading" secondItem="acH-wS-jwy" secondAttribute="trailing" constant="-8" id="wgI-ns-nTz"/>
-                    <constraint firstAttribute="bottom" secondItem="acH-wS-jwy" secondAttribute="bottom" constant="8" id="wpd-Tt-tdL"/>
                     <constraint firstItem="yPM-qJ-gpy" firstAttribute="top" secondItem="DJc-V2-h8g" secondAttribute="bottom" constant="8" id="zvL-8o-dxB"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="collectionView" destination="acH-wS-jwy" id="fh8-Ke-tPg"/>
                 <outlet property="datePicker" destination="yPM-qJ-gpy" id="UCi-IF-IFa"/>
-                <outlet property="pickerWidth" destination="DCn-e6-tGn" id="UUK-Pw-H89"/>
                 <outlet property="setButton" destination="8aC-Xg-025" id="UBJ-BV-Pt2"/>
                 <outlet property="tabBar" destination="YrG-KT-A6C" id="dWS-U3-bld"/>
                 <outlet property="timeLabel" destination="DJc-V2-h8g" id="2kr-aW-ASy"/>
